--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+.instruction-r
+    color: #00ffd5
+.instruction-i
+    color: #229bff
+.instruction-j
+    color: #ff00dd
+.registry
+    color: #00ff00
+.registry-d
+    color: #b3ff00
+.immediate
+    color: #ffae00
