--- a/src/app/registri/registri.component.sass
+++ b/src/app/registri/registri.component.sass
@@ -3,6 +3,6 @@
     grid-template-columns: auto auto
     .registro
         font-family: monospace
-        width: 5em
+        width: auto
         height: 1em
         border: 1px solid black
