--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<mat-toolbar class="mat-elevation-z6" color="primary">
+    <span>Simulatore</span>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
