--- a/src/app/registri/registri.component.sass
+++ b/src/app/registri/registri.component.sass
@@ -1,8 +1,10 @@
 .registri
     display: grid
     grid-template-columns: auto auto
+    margin-left: 1rem
     .registro
         font-family: monospace
         width: auto
         height: 1em
-        border: 1px solid black
+        border: 1px solid grey
+        padding: 2px
