added rv32i editor mode & updated rv32i registers

--- a/src/app/editor/codemirror-theme.sass
+++ b/src/app/editor/codemirror-theme.sass
@@ -27,10 +27,16 @@
     .CodeMirror-activeline-background
         background: #ffffff10
 
-    .cm-keyword
+    .cm-keyword-r
         color: #00ffd5
     .cm-keyword-i
         color: #229bff
+    .cm-keyword-s
+        color: #afafff
+    .cm-keyword-b
+        color: #ff00dd
+    .cm-keyword-u
+        color: #5dbcd2
     .cm-keyword-j
         color: #ff00dd
 
