--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -8,3 +8,4 @@
 <button mat-raised-button (click)="onStop()" [disabled]="isStopDisabled">
     <span style="display: flex; align-items: center;">Stop <i class="fas fa-square" style="color: #ff0000; margin-left: .5em;"></i></span>
 </button>
+<span>Start Line: </span><input type="text" [(ngModel)]="start">
