--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar class="mat-elevation-z6" color="primary">
     <span>Simulatore</span>
+    <a routerLink="/dlx" routerLinkActive="active">DLX</a>
+    <a routerLink="/rv32i" routerLinkActive="active">RV32I</a>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
