--- a/src/app/registri/registri.component.sass
+++ b/src/app/registri/registri.component.sass
@@ -4,7 +4,7 @@
     margin-left: 1rem
     .registro
         font-family: monospace
-        width: auto
+        width:  32ch
         height: 1em
         border: 1px solid grey
         padding: 2px
