--- a/src/custom-theme.sass
+++ b/src/custom-theme.sass
@@ -12,19 +12,19 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$DLXemu-primary: mat-palette($mat-blue)
-$DLXemu-accent: mat-palette($mat-amber, A200, A100, A400)
+$DLX-RISCV-simulator-primary: mat-palette($mat-blue)
+$DLX-RISCV-simulator-accent: mat-palette($mat-amber, A200, A100, A400)
 
 // The warn palette is optional (defaults to red).
-$DLXemu-warn: mat-palette($mat-red)
+$DLX-RISCV-simulator-warn: mat-palette($mat-red)
 
 // Create the theme object (a Sass map containing all of the palettes).
-$DLXemu-theme: mat-dark-theme($DLXemu-primary, $DLXemu-accent, $DLXemu-warn)
+$DLX-RISCV-simulator-theme: mat-dark-theme($DLX-RISCV-simulator-primary, $DLX-RISCV-simulator-accent, $DLX-RISCV-simulator-warn)
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($DLXemu-theme)
+@include angular-material-theme($DLX-RISCV-simulator-theme)
 
 
 html, body
