--- a/src/app/registri/registri.component.sass
+++ b/src/app/registri/registri.component.sass
@@ -2,6 +2,14 @@
     display: grid
     grid-template-columns: auto auto
     margin-left: 1rem
+    .gpd
+        display: grid
+        grid-template-columns: 2ch auto
+        .index
+            font-family: monospace
+            width: 2ch
+            text-align: right
+            padding: 2px 0
     .registro
         font-family: monospace
         width:  32ch
