--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,7 +3,29 @@
 
 .CodeMirror
     font-size: 1.5rem
-    .running
+    .runned
         background-color: #ffff002b
         .CodeMirror-linenumber.CodeMirror-gutter-elt
             background-color: #ffff002b
+    .next
+        background-color: #00ff002b
+        .CodeMirror-linenumber.CodeMirror-gutter-elt
+            background-color: #00ff002b
+
+mat-toolbar a
+    span
+        position: relative
+    span::before
+        content: ""
+        position: absolute
+        height: 2px
+        bottom: -5px
+        left: -4px
+        right: -4px
+        background-color: #fff
+        visibility: hidden
+        transform: scaleX(0)
+        transition: all 0.3s ease-in-out 0s
+    &.active span::before
+        visibility: visible
+        transform: scaleX(1)
