--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<mat-toolbar class="mat-elevation-z6" color="primary">
-    <span>Simulatore</span>
-    <a mat-button routerLink="/dlx" routerLinkActive="active">DLX</a>
-    <a mat-button routerLink="/rv32i" routerLinkActive="active">RV32I</a>
-</mat-toolbar>
+<div class="mat-app-background basic-container">
+    <sidenav-overview-example>loading</sidenav-overview-example>
+</div>
 
-<router-outlet></router-outlet>
+
