aggiornamento dlx interpreter

--- a/src/app/registri/registri.component.html
+++ b/src/app/registri/registri.component.html
@@ -30,6 +30,8 @@
         <div class="registro">{{registri.a | format: fType}}</div>
         <span>b</span>
         <div class="registro">{{registri.b | format: fType}}</div>
+        <span>c</span>
+        <div class="registro">{{registri.c | format: fType}}</div>
     </div>
     <div *ngIf="isRV32I">
         <span>PC</span>
