Open & close sidebar documentation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="mat-app-background basic-container">
-    <sidenav-overview-example>loading</sidenav-overview-example>
+    <sidenav-overview-example></sidenav-overview-example>
 </div>
 
 
