--- a/src/app/sidenav/sidenav-overview-example.html
+++ b/src/app/sidenav/sidenav-overview-example.html
@@ -1,9 +1,13 @@
 <mat-sidenav-container class="example-container">
+
   <mat-toolbar class="mat-elevation-z6" color="primary">
+    <button mat-button [style.background-color]="btnColour" [disabled]="anotherStarted" (click)="startButton = true; change(); sidenav.toggle()">DOC</button>
     <span>Simulatore</span>
     <a mat-button routerLink="/dlx" routerLinkActive="active">DLX</a>
     <a mat-button routerLink="/rv32i" routerLinkActive="active">RV32I</a>
-</mat-toolbar>
-  <mat-sidenav mode="side" opened>DOCUMENTAZIONE</mat-sidenav>
+  </mat-toolbar>
+  <mat-sidenav #sidenav mode="side" [(opened)]="opened">
+    <h3>DOCUMENTAZIONE</h3>
+  </mat-sidenav>
   <section><router-outlet></router-outlet></section>
 </mat-sidenav-container>
