--- a/src/app/sidenav/sidenav-overview-example.css
+++ b/src/app/sidenav/sidenav-overview-example.css
@@ -7,3 +7,11 @@
     background: rgb(63, 63, 63);
   }
   
+  .example-events {
+    width: 300px;
+    height: 200px;
+    overflow: auto;
+    border: 1px solid #555;
+  }
+
+
