--- a/src/app/main-page/main-page.component.sass
+++ b/src/app/main-page/main-page.component.sass
@@ -1,3 +1,9 @@
 .main
     display: grid
     grid-template-columns: 60% auto
+.example-container 
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
