--- a/src/app/documentazione/documentazione.component.html
+++ b/src/app/documentazione/documentazione.component.html
@@ -1,3 +1,10 @@
-<p>
-  documentazione works!
-</p>
+<mat-accordion >
+  <mat-expansion-panel *ngFor="let instr of documentation">
+    <mat-expansion-panel-header>
+      <mat-panel-title>{{instr.name}}</mat-panel-title>
+      <mat-panel-description>{{instr.type}}</mat-panel-description>
+      <mat-panel-description>{{instr.syntax}}</mat-panel-description>
+    </mat-expansion-panel-header>
+    <p>{{instr.description}}</p>
+  </mat-expansion-panel>
+</mat-accordion>
