--- a/src/app/documentazione/documentazione.component.html
+++ b/src/app/documentazione/documentazione.component.html
@@ -1,5 +1,5 @@
-<mat-accordion >
-  <mat-expansion-panel *ngFor="let instr of documentation">
+<mat-accordion>
+  <mat-expansion-panel *ngFor="let instr of documentazione">
     <mat-expansion-panel-header>
       <mat-panel-title>{{instr.name}}</mat-panel-title>
       <mat-panel-description>{{instr.type}}</mat-panel-description>
