--- a/src/app/registri/registri.component.sass
+++ b/src/app/registri/registri.component.sass
@@ -10,6 +10,14 @@
             width: 2ch
             text-align: right
             padding: 2px 0
+    .gpd-rv32i
+        display: grid
+        grid-template-columns: 3ch auto
+        .index-rv32i
+            font-family: monospace
+            width: 3ch
+            text-align: right
+            padding: 2px 0
     .registro
         font-family: monospace
         width:  32ch
