--- a/src/app/main-page/main-page.component.sass
+++ b/src/app/main-page/main-page.component.sass
@@ -1,11 +1,15 @@
+@import '~@angular/material/theming'
+
 .main
     display: grid
     grid-template-columns: 60% auto
-.example-container 
+.container 
     position: absolute
     top: 0
     left: 0
     right: 0
     bottom: 0
-.mat-sidenav
-    width: 25%
+mat-sidenav
+    background: #383838
+    border: none
+    width: 23rem
