--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,8 +1,16 @@
+$navbar-height: 40px
 #navbar
-    height: 40px
-    padding: 8px
+    position: fixed
+    top: 0
+    right: 0
+    left: 0
+    height: $navbar-height
+    padding: 8px 8px 8px 0px
+    z-index: 10
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.3)
 .basic-container
     position: relative
+    top: $navbar-height
     display: block
-    min-height: calc( 100% - 40px)
+    min-height: calc( 100% - #{$navbar-height} )
     min-width: 100%
