--- a/src/app/documentazione/documentazione.component.html
+++ b/src/app/documentazione/documentazione.component.html
@@ -1,14 +1,16 @@
 
-<mat-form-field class="example-full-width">
-  <input matInput placeholder="Search" [(ngModel)]="search">
+<mat-form-field class="search-field">
+  <input matInput placeholder="Search" name="search" autocomplete="0" [(ngModel)]="search">
 </mat-form-field>
-<mat-accordion>
-  <mat-expansion-panel *ngFor="let instr of documentazioneFiltrata">
-    <mat-expansion-panel-header>
-      <mat-panel-title>{{instr.name}}</mat-panel-title>
-      <mat-panel-description>{{instr.type}}</mat-panel-description>
-      <mat-panel-description>{{instr.syntax}}</mat-panel-description>
-    </mat-expansion-panel-header>
-    <p>{{instr.description}}</p>
-  </mat-expansion-panel>
-</mat-accordion>
+<div class="mat-accordion-container">
+  <mat-accordion>
+    <mat-expansion-panel *ngFor="let instr of documentazioneFiltrata">
+      <mat-expansion-panel-header>
+        <mat-panel-title class="name">{{instr.name}}</mat-panel-title>
+        <mat-panel-description class="type">{{instr.type}}</mat-panel-description>
+        <mat-panel-description class="syntax">{{instr.syntax}}</mat-panel-description>
+      </mat-expansion-panel-header>
+      <p [innerHTML]="instr.description"></p>
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
