--- a/src/app/registri/registri.component.html
+++ b/src/app/registri/registri.component.html
@@ -1,6 +1,6 @@
 <div class="registri">
     <div>
-        <span>GPRD</span>
+        <span>GPR</span>
         <ng-container *ngIf="isDLX">
             <div class="gpd" *ngFor="let r of registri.r; index as i">
                 <div class="index">{{i}}</div>
