completed dlx doc, editor fixes and dlx overflow handling

--- a/src/app/registri/registri.component.html
+++ b/src/app/registri/registri.component.html
@@ -25,8 +25,8 @@
         <div class="registro">{{registri.mar | format: fType}}</div>
         <span>IR</span>
         <div class="registro">{{registri.ir | format: fType}}</div>
-        <span>TEMP</span>
-        <div class="registro">{{registri.temp | format: fType}}</div>
+        <!-- <span>TEMP</span>
+        <div class="registro">{{registri.temp | format: fType}}</div> -->
         <span>MDR</span>
         <div class="registro">{{registri.mdr | format: fType}}</div>
         <span>A</span>
