--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -1,3 +1,6 @@
+:host
+    padding: 1rem
+
 .btn
     display: flex
     align-items: center
@@ -7,3 +10,12 @@
     color: #ff0000
 .green
     color: #00ff00
+
+.btn-container
+    display: flex
+    justify-content: space-between
+    align-items: center
+    margin-top: 1rem
+
+.mr
+    margin-right: 1rem
