--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -8,6 +8,8 @@ $navbar-height: 40px
     padding: 8px 8px 8px 0px
     z-index: 10
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.3)
+    .spacer
+        flex: 1 1 auto
 .basic-container
     position: relative
     top: $navbar-height
