--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,7 +3,7 @@
 
 .CodeMirror
     font-size: 1.5rem
-    height: 60%
+    height: calc( 100% - 6rem)
 
 .mat-drawer-content.mat-sidenav-content .main
     height: 100%
