--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -4,7 +4,10 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <div class="main">
-            <app-editor [mode]="editorMode" [(pc)]="registri.pc" (runLine)="onRun($event)" (doParseTags)="doParseTags($event)"></app-editor>
+            <div class="left">
+                <app-editor [mode]="editorMode" [(pc)]="registri.pc" (runLine)="onRun($event)" (doParseTags)="doParseTags($event)"></app-editor>
+                <app-memory [memory]="memory"></app-memory>
+            </div>
             <app-registri [registri]="registri"></app-registri>
         </div>
     </mat-sidenav-content>
