--- a/src/app/main-page/main-page.component.sass
+++ b/src/app/main-page/main-page.component.sass
@@ -3,6 +3,10 @@
 .main
     display: grid
     grid-template-columns: 60% auto
+    .left
+        padding: 1rem
+        display: grid
+        grid-template-rows: auto 16rem
 .container 
     position: absolute
     top: 0
