Memory component changes

--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,5 +1,5 @@
 <ngx-codemirror #codeEditor
-    [(ngModel)]="content"
+    [(ngModel)]="codeService.content"
     [options]="options"
 ></ngx-codemirror>
 <div class="btn-container">
