--- a/src/app/memory/memory.component.html
+++ b/src/app/memory/memory.component.html
@@ -1,27 +1,38 @@
 <span>Memory</span>
-
-<div class="memory">
-    <div class="dev" matRipple *ngFor="let device of memory.devices"
-        [style.left]="((device.min_address/1073741824)*100).toFixed(2)+'%'"
-        [style.right]="(100 - (device.max_address/1073741824)*100).toFixed(2)+'%'"
-        (click)="selected == device ? selected = null : selected = device"
-        [class.selected]="selected == device">
-        <span>{{ device.name }}</span>
+<div class="main-container">
+    <div class="memory">
+        <div class="dev" matRipple *ngFor="let device of memoryService.memory.devices"
+            [style.left]="((device.min_address/1073741824)*100).toFixed(2)+'%'"
+            [style.right]="(100 - (device.max_address/1073741824)*100).toFixed(2)+'%'"
+            (click)="selected == device ? selected = null : selected = device"
+            [class.selected]="selected == device"
+            [matTooltip]="device.size"
+            matTooltipPosition="above"
+            matTooltipClass="device-size"
+            >
+            <span>{{ device.name }}</span>
+        </div>
+        <div class="gig-overlay">
+            <div class="gig"></div>
+            <div class="gig"></div>
+            <div class="gig"></div>
+            <div class="gig"></div>
+        </div>
     </div>
-    <div class="gig-overlay">
-        <div class="gig"></div>
-        <div class="gig"></div>
-        <div class="gig"></div>
-        <div class="gig"></div>
+    <button mat-raised-button id="add" (click)="onAdd()"><i class="fas fa-plus"></i></button>
+    <div class="container" *ngIf="selected" @myInsertRemoveTrigger>
+        <mat-form-field id="min" appearance="fill">
+            <mat-label>min</mat-label>
+            <input matInput [(ngModel)]="selected.min_address_hex" minlength="8" maxlength="8" [disabled]="selected.name == 'EPROM'"/>
+        </mat-form-field>
+        <mat-form-field id="name" appearance="fill">
+            <mat-label>name</mat-label>
+            <input matInput [(ngModel)]="selected.name" [disabled]="selected.name == 'EPROM'"/>
+        </mat-form-field>
+        <mat-form-field id="max" appearance="fill">
+            <mat-label>max</mat-label>
+            <input matInput [(ngModel)]="selected.max_address_hex" minlength="8" maxlength="8"/>
+        </mat-form-field>
     </div>
-</div>
-<div class="container" *ngIf="selected" @myInsertRemoveTrigger>
-    <mat-form-field id="min" appearance="fill">
-        <mat-label>min</mat-label>
-        <input matInput [(ngModel)]="selected.min_address_hex" minlength="8" maxlength="8"/>
-    </mat-form-field>
-    <mat-form-field id="max" appearance="fill">
-        <mat-label>max</mat-label>
-        <input matInput [(ngModel)]="selected.max_address_hex" minlength="8" maxlength="8"/>
-    </mat-form-field>
+    <button mat-raised-button *ngIf="selected" id="del" (click)="onDelete(selected)" [disabled]="selected.name == 'EPROM'" @myInsertRemoveTrigger><i class="fas fa-trash"></i></button>
 </div>
